# xcode

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
xcode/: __init__.py  agent.py  backends.py  cli.py  config.py  embedded.py  hooks.py  input_bar.py  keys.py  mcp.py  memory.py  permissions.py  providers.py  session.py  tools.py  ui.py  update.py
