[project]
name = "xcoding"
version = "0.1.8"
description = "xcoding by @c7s89r — a local-model coding agent. Claude Code, but powered by Ollama or llama.cpp."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "c7s89r", email = "c7s89r@users.noreply.github.com" }]
maintainers = [{ name = "c7s89r", email = "c7s89r@users.noreply.github.com" }]
keywords = ["cli", "coding-agent", "ollama", "llama.cpp", "ai", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "discord.py>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/c7s89r/xcode"
Repository = "https://github.com/c7s89r/xcode"
Issues = "https://github.com/c7s89r/xcode/issues"

[project.scripts]
xcoding = "xcode.cli:main"
xcode = "xcode.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xcode*"]
